src/objects/application__c.object
<CustomObject>
    <fields>
        <fullName>Account_Look_up_Relation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Look up Relation</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Name</field>
                <operation>contains</operation>
                <value>test</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>applications</relationshipLabel>
        <relationshipName>applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Child_Count__c</fullName>
        <label>Child Count</label>
        <summaryForeignKey>testObj__c.application_name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <controllingField>Do_you_want_to_visit__c</controllingField>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Srilanka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iraland</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_you_want_to_visit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do you want to visit?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MY_Auto_Number__c</fullName>
        <displayFormat>APP-{000000}</displayFormat>
        <label>MY Auto Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>My_CheeckBox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>My CheeckBox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_Multi_Pick_List__c</fullName>
        <label>My Multi Pick List</label>
        <picklist>
            <picklistValues>
                <fullName>Andhra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telangana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tamilnadu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>karnataka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kerala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orissa</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>My_New_Pick_List__c</fullName>
        <label>My New Pick List</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>111</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>222</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>33</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>333</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>44</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>444</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>55</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>555</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>66</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>666</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>77</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>777</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>88</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>888</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>99</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>999</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>My_Number__c</fullName>
        <label>My Number</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>My_Percent__c</fullName>
        <label>My Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>My_Phone__c</fullName>
        <label>My Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>My_Picklist__c</fullName>
        <label>My Picklist</label>
        <picklist>
            <controllingField>My_CheeckBox__c</controllingField>
            <picklistValues>
                <fullName>Zero</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Three</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Four</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Five</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Six</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seven</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nine</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>My_URL__c</fullName>
        <label>My URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>My_email__c</fullName>
        <label>My email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Number__c</fullName>
        <displayFormat>Application-{0000000}</displayFormat>
        <label>New Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Places__c</fullName>
        <label>Places</label>
        <picklist>
            <controllingField>Country__c</controllingField>
            <picklistValues>
                <fullName>Hyderabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>kolkatta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>mumbai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banglore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>mannheim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>berlin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>frankfrut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>paris</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Self_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Self Application</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>application__c.CreatedBy.FirstName</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>application__c</referenceTo>
        <relationshipLabel>applications</relationshipLabel>
        <relationshipName>applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Formula__c</fullName>
        <formula>IF(  CONTAINS(Name__c  , &apos;salesforce&apos;) , &apos;attending the classes&apos;, &apos;not related to us&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test Formula</label>
        <type>Text</type>
    </fields>
    <label>application</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>applications</pluralLabel>
    <recordTypes>
        <fullName>New_Application</fullName>
        <active>true</active>
        <label>New Application</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Email_is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(My_email__c)</errorConditionFormula>
        <errorMessage>Please enter valid email address</errorMessage>
    </validationRules>
</CustomObject>